Reviewed by Andreas Kling.

Broken build on QNX
https://bugs.webkit.org/show_bug.cgi?id=63717

QNX doesn't support pthread's SA_RESTART (required by
JSC_MULTIPLE_THREADS), JIT is broken at runtime and there a
few minor compilation errors here and there.

Original patch by Ritt Konstantin <ritt.ks@gmail.com>, also
tested by him on QNX v6.5 (x86)

* wtf/DateMath.cpp: fix usage of abs/labs
* wtf/Platform.h: Disable JIT and JSC_MULTIPLE_THREADS
* wtf/StackBounds.cpp: Add a couple of missing includes (and sort them)


Canonical link: https://commits.webkit.org/80173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90916 268f45cc-cd09-0410-ab3c-d52691b4dbfc